# hts-rs

./: Cargo.toml  LICENSE  NEWS.md  README.md
.github/workflows/: rust.yml
crates/hts-core/: Cargo.toml  README.md
crates/hts-core/examples/: readme.rs
crates/hts-core/src/: error.rs  hierarchy.rs  hts.rs  lib.rs  period.rs  summation_matrix.rs
crates/hts-core/tests/: integration_test.rs
crates/hts-core/tests/data/: aggregated_series.csv
